fix: Fix authentication page element overflow.

--- a/src/main/resources/static/css/auth-forms.css
+++ b/src/main/resources/static/css/auth-forms.css
@@ -1,17 +1,27 @@
 @import "imports.css";
 
-body {
-    overflow-x: hidden;
-    height:100vh;
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow:hidden;
 }
 
-.login-container {
+.register-container {
     font-family: "Golos Text", "Helvetica", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 75vh;
+}
+
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    margin-top: 150px;/* Ensure full viewport height */
 }
 
 .login-box {
@@ -20,9 +30,9 @@ body {
     border-radius: 12px;
     border: 1px solid #B4B4B4FF;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    width: 350px;
+    width: 100%;
+    max-width: 450px;
     text-align: center;
-    backdrop-filter: blur(8px);
 }
 
 .login-box h2 {
@@ -33,10 +43,12 @@ body {
 
 .login-box .form-control {
     border-radius: 8px;
+    width: 100%;
 }
 
 .login-box button {
     border-radius: 8px;
+    width: 100%;
 }
 
 .login-box p a {
@@ -53,9 +65,9 @@ body {
     color: white;
     background-color: #d02b2b;
     transition: background-color 0.15s ease-in-out;
+    width: 100%;
 }
 
 #loginbut:hover {
     background-color: #b21c1c;
-
 }
